# cicd-demo

./: .gitignore  README.md  agents.md  api.py  main.py  pyproject.toml  requirements.txt  test_api.py  test_util.py  util.py
.github/agents/: backend.agent.md  frontend.agent.md  security.agent.md
.github/workflows/: PR.yml  first-workflow.yml
