[project]
name = "cicd-demo"
version = "0.1.0"
description = "CI/CD demo FastAPI application with testing and environment configuration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1"
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
]
